# music-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  music-manager.example.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-check.yml
docs/: v0.3-format-decision.md  v0.4-musicbrainz-decision.md  v0.4.0-release-notes.md  v0.5-staging-decision.md
examples/: README.md  duplicate_candidates.csv  library_analysis.csv
music_manager/: __init__.py  __main__.py  analysis_runs.py  analyzer.py  artifact_schema.py  cli.py  config.py  deduper.py  matcher.py  models.py  musicbrainz_client.py  musicbrainz_orchestration.py  musicbrainz_runs.py  musicbrainz_scoring.py  musicbrainz_subjects.py  organizer.py  reports.py  scan_runs.py  scanner.py  sources.py  staging_plans.py  utils.py
scripts/: scan_library.py
tests/: __init__.py  musicbrainz_fakes.py  test_analysis_runs.py  test_analysis_scale.py  test_analyzer.py  test_artifact_schema.py  test_cli.py  test_config.py  test_contract_regressions.py  test_legacy_reports.py  test_matcher.py  test_musicbrainz_client_policy.py  test_musicbrainz_orchestration.py  test_musicbrainz_production_client.py  test_musicbrainz_runs.py  test_musicbrainz_schema.py  test_musicbrainz_scoring.py  test_musicbrainz_subjects.py  test_scan_runs.py  test_scanner.py  test_sources.py  test_staging_plans.py  test_staging_schema.py  test_workflow.py
tests/fixtures/musicbrainz/: recordings.json  (+1 more)
(+6 files in other folders)
